# fio.relic

./: .gitattributes  .gitignore  .gitmodules  README.md
FioMemento/: CMakeLists.txt  Database.cpp  Database.h  SocketServer.cpp  SocketServer.h  WebsocketServer.cpp  WebsocketServer.h  main.cpp  utils.cpp  utils.h
FioMemento/docs/: FioMemento_deployment.md
Relic/: CMakeLists.txt  Cleaner.cpp  Cleaner.h  Database.cpp  Database.h  Relic.cpp  Relic.h  Websocket.Listener.cpp  Websocket.Listener.h  Websocket.Server.cpp  Websocket.Server.h  Websocket.Session.cpp  Websocket.Session.h  WebsocketServer.cpp  WebsocketServer.h  Writer.cpp  Writer.h  WriterWebsocketSession.cpp  WriterWebsocketSession.h  main.cpp  options.cpp  options.h  utils.cpp  utils.h
Relic/config/: config.ini
Relic/docs/: Relic_deployment.md
Relic/sql/mysql/: create_db_users.sh  create_memento_db.sh
docs/: Chronicle tips.md  FIO tips.md  WSL tips.md  localnet-standup.md  postgres-standup.md  tech-stack.md
docs/Chronicle/: Chronicle tips.md  config.ini
docs/deploying FIO+Chronicle+AntelopeMemento/: deploying.txt  deploying_on_the_same_machine.md  deploying_on_the_same_machine.txt
docs/deploying FIO+Chronicle+AntelopeMemento/Chronicle/: config.ini
docs/prototype/: pathforward-notes.txt
prototype/: Cleaner.cpp  Writer.cpp  Writer.h  options.cpp
prototype/config/: config.ini
prototype/docs/: Relic_deployment.md
prototype/docs/prototype/fio/: config.ini
prototype/docs/prototype/fio+chronicle+antelopeMemento/: deploying.md
prototype/sql/mysql/: create_Relic_db.sh
